# hextech-rayshaders

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.R
.github/: dependabot.yml
.github/workflows/: conventional-commit.yml  dependabot-approve-merge.yml  lint.yml  release-please.yml  run-commit-hooks.yml  supply-chain-scan.yml
input/gemeenten/: gemeenten.dbf  gemeenten.shp  gemeenten.shx
src/: colorize.py  hexagonize.py  render.R  utils.py
