[tool.poetry]
name = "hextech-rayshaders"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Bas Nottrot"]

[tool.poetry.dependencies]
python = "^3.14"
affine = "^2.4.0"
dotenv = "^0.9.9"
geopandas = "^1.1.3"
h3 = "^4.4.2"
h5py = "^3.16.0"
loguru = "^0.7.2"
matplotlib = "^3.10.9"
numpy = "^2.4.4"
perlin-noise = "^1.13"
pre-commit = "^4.6.0"
rasterio = "^1.5.0"
ruff = "^0.15.12"
shapely = "^2.1.2"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
